[project]
name = "pycvt"
version = "0.0.1-6"
authors = [
  { name = "ferretsprite", email = "ferret-sprite-goon@duck.com" }
]

description = "A lightweight Python toolkit for seamless image composition, color processing, and visualizing detection results."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "easyfont>=0.0.1.post10",
    "imageio>=2.37.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pydantic>=2.11.5",
    "scikit-image>=0.25.2",
]

[project.urls]
Homepage = "https://github.com/xx025/pycvt"
Repository = "https://github.com/xx025/pycvt"
Documentation = "https://github.com/xx025/pycvt#readme"

[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
